# DriveSeg

./: README.md  generate_half_model.py  hand_seg.py  inference.py  train.py
LibtorchSegmentation/: CMakeLists.txt  depth_sensing.py  server.py
LibtorchSegmentation/include/: DriveSegmentation.h
LibtorchSegmentation/src/: DriveSegmentation.cpp  main.cpp
dataloaders/datasets/: bdd100k.py  bdd_toy.py  cityscapes.py  nice.py  pascal.py  pascal_toy.py  sbd.py
modeling_infer/: deeplab.py
modeling_infer/backbone/: __init__.py
onnx2tensorrt/: Makefile  cmd.txt  onnx2tensorrt.cpp
utils/: calculate_weights.py  evaluate.py  lr_scheduler.py  saver.py  visualize.py
